--- a/PomotrApp/Pages/Shared/_LoginPartial.cshtml
+++ b/PomotrApp/Pages/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using PomotrApp.Models;
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@inject SignInManager<FamilyMember> SignInManager
+@inject UserManager<FamilyMember> UserManager
 
 @{
     string returnUrl = null;
